# vins-plp

./: CMakeLists.txt
3rd/line_descriptor/: CMakeLists.txt
3rd/line_descriptor/include/line_descriptor/: descriptor_custom.hpp
3rd/line_descriptor/src/: LSDDetector_custom.cpp  draw_custom.cpp
launch/: cam_odom.launch
src/: dbg.h  rosNodeTest.cpp
src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  line_feature_manager.cpp  line_feature_manager.h  parameters.cpp  parameters.h
src/estimator/deprecated_/: vp.cpp  vp.h
src/factor/: imu_factor.h  integration_base.h  integration_odom.h  line_local_parameterization.h  line_projection_factor.cpp  line_projection_factor.h  marginalization_factor.cpp  marginalization_factor.h  odom_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h
src/featureTracker/: feature_tracker.cpp  feature_tracker.h
src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp  solve_5pts.h
src/utility/: utility.cpp  utility.h  visualization.cpp  visualization.h
